--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 anyio==4.11.0
-archspec @ file:///croot/archspec_1709217642129/work
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
 arrow==1.4.0
@@ -9,29 +8,23 @@ attrs==25.4.0
 babel==2.17.0
 beautifulsoup4==4.14.2
 bleach==6.3.0
-boltons @ file:///work/perseverance-python-buildout/croot/boltons_1698851177130/work
-Brotli @ file:///croot/brotli-split_1714483155106/work
-brotlicffi @ file:///home/task_176174500256851/conda-bld/brotlicffi_1761745022533/work
+blinker==1.9.0
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
 colorama==0.4.6
 comm==0.2.3
-conda @ file:///home/task_176406871657694/conda-bld/conda_1764069009319/work/conda-src
-conda-libmamba-solver @ file:///opt/miniconda3/conda-bld/conda-libmamba-solver_1761744809966/work/src
-conda-package-handling @ file:///croot/conda-package-handling_1714483155348/work
-conda_package_streaming @ file:///work/perseverance-python-buildout/croot/conda-package-streaming_1698847176583/work
-cryptography @ file:///croot/cryptography_1740577825284/work
 debugpy==1.8.17
 decorator==5.2.1
 defusedxml==0.7.1
-distro @ file:///croot/distro_1714488253808/work
 executing==2.2.1
 fastjsonschema==2.21.2
+Flask==2.3.3
 fqdn==1.5.1
-frozendict @ file:///croot/frozendict_1713194832637/work
 gitdb==4.0.12
 GitPython==3.1.45
+gunicorn==25.0.3
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -40,10 +33,11 @@ ipykernel==7.1.0
 ipython==9.7.0
 ipython_pygments_lexers==1.1.1
 isoduration==20.11.0
+itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.6
+joblib==1.5.3
 json5==0.12.1
-jsonpatch @ file:///croot/jsonpatch_1714483231291/work
 jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
@@ -59,10 +53,8 @@ jupyterlab_git==0.51.2
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.28.0
 lark==1.3.1
-libmambapy @ file:///croot/mamba-split_1734469461757/work/libmambapy
 MarkupSafe==3.0.3
 matplotlib-inline==0.2.1
-menuinst @ file:///croot/menuinst_1714510563922/work
 mistune==3.1.4
 nbclient==0.10.2
 nbconvert==7.16.6
@@ -70,23 +62,22 @@ nbdime==4.0.2
 nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook_shim==0.2.4
+numpy==2.4.2
 packaging==25.0
+pandas==3.0.0
 pandocfilters==1.5.1
 parso==0.8.5
 pexpect==4.9.0
 platformdirs==4.5.0
-pluggy @ file:///work/perseverance-python-buildout/croot/pluggy_1698805497733/work
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
 psutil==7.1.3
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pycosat @ file:///croot/pycosat_1714510623388/work
 pycparser==2.23
 Pygments==2.19.2
-pyOpenSSL @ file:///croot/pyopenssl_1741343803032/work
-PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/work
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 python-json-logger==4.0.0
 PyYAML==6.0.3
 pyzmq==27.1.0
@@ -96,7 +87,8 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
 rpds-py==0.29.0
-ruamel.yaml @ file:///work/perseverance-python-buildout/croot/ruamel.yaml_1698863605521/work
+scikit-learn==1.8.0
+scipy==1.17.0
 Send2Trash==1.8.3
 setuptools==80.9.0
 six==1.17.0
@@ -105,11 +97,10 @@ sniffio==1.3.1
 soupsieve==2.8
 stack-data==0.6.3
 terminado==0.18.1
+threadpoolctl==3.6.0
 tinycss2==1.4.0
 tornado==6.5.2
-tqdm==4.66.3
 traitlets==5.14.3
-truststore @ file:///work/perseverance-python-buildout/croot/truststore_1701735771625/work
 typing_extensions==4.15.0
 tzdata==2025.2
 uri-template==1.3.0
@@ -118,5 +109,4 @@ wcwidth==0.2.14
 webcolors==25.10.0
 webencodings==0.5.1
 websocket-client==1.9.0
-wheel==0.43.0
-zstandard @ file:///croot/zstandard_1714677652653/work
+Werkzeug==3.1.5
